--- a/FiscaliZi.Colinfo/Views/Coleta.xaml
+++ b/FiscaliZi.Colinfo/Views/Coleta.xaml
@@ -66,7 +66,7 @@
                                         <ColumnDefinition Width="104"/>
                                         <ColumnDefinition Width="87"/>
                                         <ColumnDefinition Width="109"/>
-                                        <ColumnDefinition Width="21"/>
+                                        <ColumnDefinition Width="25"/>
                                     </Grid.ColumnDefinitions>
                                     <Grid.RowDefinitions>
                                         <RowDefinition Height="20"/>
@@ -87,23 +87,20 @@
                                     <TextBlock Grid.Column="2" Grid.Row="1" Margin="5,1,0,5.033" Width="Auto" FontSize="10.5" HorizontalAlignment="Stretch" VerticalAlignment="Stretch" ><Run Text="PES: " FontWeight="Bold"/><Run Text=" "/><Run Text="000.000,00"/></TextBlock>
                                     <TextBlock Grid.Column="3" Grid.Row="0" Margin="5,3,0,1" FontSize="10.5" Width="Auto" HorizontalAlignment="Stretch" VerticalAlignment="Stretch"><Run Text="ENV: " FontWeight="Bold"/><Run Text=" "/><Run Text="{Binding DataEnvio, StringFormat=\{0:dd/MM hh:mm:ss\}}"/></TextBlock>
                                     <TextBlock Grid.Column="3" Grid.Row="1" Margin="5,1,0,3" FontSize="10.5" HorizontalAlignment="Stretch" Width="Auto"><Run Text="VAL: " FontWeight="Bold"/><Run Text=" "/><Run Text="{Binding Pedidos, Converter={StaticResource TotalValPedsConverter}}"/></TextBlock>
-                                    <Button Grid.Column="4" Grid.Row="0" Margin="2,1.5,1,1.5" 
-                                              Command="{Binding DataContext.RemoveCommand, ElementName=lstVendedores}" 
-                                              CommandParameter="{Binding}"
-                                              Width="Auto" Height="Auto"
-                                              Padding="0" UseLayoutRounding="False" 
-                                              ClickMode="Release" HorizontalAlignment="Stretch" 
-                                              VerticalAlignment="Stretch" Foreground="#FFCDC5C5">
-                                        <Button.Background>
-                                            <ImageBrush/>
-                                        </Button.Background>
-                                    </Button>
-                                    <Viewbox Grid.Column="4" Grid.Row="1" Width="Auto" Height="Auto" Margin="2.5,2">
-                                        <Rectangle x:Name="RECT" Height="16" Grid.RowSpan="2" 
-                                           VerticalAlignment="Top" Width="16" Margin="0" 
-                                           Grid.Column="4" Grid.Row="1" 
-                                           Fill="{Binding Pedidos, Converter={StaticResource SituacaoCNPJColorConverter}}" />
-                                    </Viewbox>
+                                    <StackPanel Grid.Column="4" Grid.Row="0" Grid.RowSpan="2">
+                                        <materialDesign:PopupBox
+                                            Width="Auto">
+                                            <StackPanel>
+                                                <Button Content="More"/>
+                                                <Button Content="Options"/>
+                                            </StackPanel>
+                                        </materialDesign:PopupBox>
+                                        <Viewbox Width="Auto" Height="Auto" >
+                                            <Rectangle x:Name="RECT" Height="10"
+                                           VerticalAlignment="Top" Width="18"
+                                           Fill="{Binding Pedidos, Converter={StaticResource SituacaoCNPJColorConverter}}" HorizontalAlignment="Center" />
+                                        </Viewbox>
+                                    </StackPanel>
                                 </Grid>
                             </DataTemplate>
                         </ListBox.ItemTemplate>
