--- a/FiscaliZi.Colinfo/MainWindow.xaml
+++ b/FiscaliZi.Colinfo/MainWindow.xaml
@@ -12,7 +12,9 @@
                    Title="MainWindow" 
                    Height="700" Width="1230"
                    GlowBrush="{DynamicResource AccentColorBrush}"
-                   DataContext="{Binding Source={StaticResource Locator}, Path=Main}" BorderBrush="{DynamicResource WindowTitleColorBrush}" BorderThickness="2" >
+                   DataContext="{Binding Source={StaticResource Locator}, Path=Main}" 
+                   BorderBrush="{DynamicResource WindowTitleColorBrush}" 
+                   BorderThickness="2" >
 
     <Window.Resources>
     </Window.Resources>
